# docqa-engine

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEMO_MODE.md  Dockerfile  Dockerfile.api  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
demo_data/: sample_faq.txt  sample_policy.txt
demo_docs/: machine_learning.md  python_guide.md  startup_playbook.md
docqa_engine/: __init__.py  answer.py  answer_quality.py  api.py  batch.py  benchmark_runner.py  chunking.py  citation_scorer.py  context_compressor.py  conversation_manager.py  cost_tracker.py  document_graph.py  embedder.py  evaluator.py  exporter.py  ingest.py  multi_hop.py  pipeline.py  prompt_lab.py  query_expansion.py  reranker.py  retriever.py  summarizer.py  vector_store.py
docs/adr/: 0001-hybrid-retrieval-strategy.md  0002-tfidf-local-embeddings.md  0003-citation-scoring-framework.md  0004-rest-api-wrapper-design.md
tests/: test_answer.py  test_answer_quality.py  test_api.py  test_batch.py  test_benchmark_runner.py  test_chunking.py  test_citation_scorer.py  test_client_demo.py  test_context_compressor.py  test_conversation_manager.py  test_cost_tracker.py  test_document_graph.py  test_embedder.py  test_evaluator.py  test_exporter.py  test_ingest.py  test_multi_hop.py  test_pipeline.py  test_prompt_lab.py  test_query_expansion.py  test_reranker.py  test_retriever.py  test_summarizer.py  test_vector_store.py
