[project]
name = "docqa-engine"
version = "0.1.0"
description = "Upload documents, ask questions — RAG pipeline with prompt engineering lab"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
